<resources>
    <string name="app_name">MyConstraintLayout</string>
    <string name="welcome"> Welcome</string>
    <string name="center">  Center</string>
    <string name="basic">   Basic</string>
    <string name="guide">   Guideline</string>
    <string name="basics">  Basic Arrangement</string>

    <string name="one">     One</string>
    <string name="two">     Two</string>
    <string name="three">   Three</string>
    <string name="four">    Four</string>
    <string name="five">    Five</string>
    <string name="six">     Six</string>
    <string name="seven">   Seven</string>
</resources>
