<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/common_16"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvBasicHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/basics"
        android:textSize="@dimen/text_heading"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnOne"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/one"
        android:textSize="@dimen/text_normal"
        app:layout_constraintLeft_creator="1"
        android:layout_marginTop="@dimen/common_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBasicHeading" />

    <Button
        android:id="@+id/btnTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/two"
        android:textSize="@dimen/text_normal"
        app:layout_constraintLeft_creator="1"
        android:layout_marginTop="@dimen/common_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_creator="1"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintRight_toRightOf="@id/btnOne"
        app:layout_constraintTop_toBottomOf="@+id/btnOne" />

    <Button
        android:id="@+id/tvThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/three"
        android:textSize="@dimen/text_normal"
        app:layout_constraintLeft_creator="1"
        android:layout_marginTop="@dimen/common_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_creator="1"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintRight_toLeftOf="@id/btnTwo"
        app:layout_constraintTop_toBottomOf="@+id/btnTwo" />

    <Button
        android:id="@+id/btnFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/four"
        android:textSize="@dimen/text_normal"
        app:layout_constraintLeft_creator="1"
        android:layout_marginTop="@dimen/common_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvThree" />

    <Button
        android:id="@+id/btnFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/five"
        android:textSize="@dimen/text_normal"
        app:layout_constraintLeft_creator="1"
        android:layout_marginTop="@dimen/common_16"
        app:layout_constraintRight_creator="1"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintLeft_toRightOf="@id/btnTwo"
        app:layout_constraintTop_toBottomOf="@+id/btnFour"/>

    <Button
        android:id="@+id/btnSix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/six"
        android:textSize="@dimen/text_normal"
        app:layout_constraintLeft_creator="1"
        android:layout_marginTop="@dimen/common_16"
        app:layout_constraintRight_creator="1"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintRight_toLeftOf="@id/btnFive"
        app:layout_constraintTop_toBottomOf="@+id/btnFive"/>

    <Button
        android:id="@+id/btnSeven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/seven"
        android:textSize="@dimen/text_normal"
        app:layout_constraintLeft_creator="1"
        android:layout_marginTop="@dimen/common_16"
        app:layout_constraintRight_creator="1"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintLeft_toRightOf="@id/btnFive"
        app:layout_constraintTop_toBottomOf="@+id/btnSix"/>

</androidx.constraintlayout.widget.ConstraintLayout>