<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_16">

    <Button
        android:id="@+id/btnOne"
        android:text="@string/basic"
        android:onClick="onClickShow"
        android:tag="layout_basic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintRight_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/btnTwo"
        android:text="@string/center"
        android:tag="layout_center"
        android:onClick="onClickShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOne"
        app:layout_constraintRight_creator="1"
        app:layout_constraintLeft_creator="1"/>

    <Button
        android:id="@+id/btnThree"
        android:text="@string/guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTwo"
        app:layout_constraintRight_creator="1"
        app:layout_constraintLeft_creator="1"/>

</androidx.constraintlayout.widget.ConstraintLayout>